chore: update appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,12 @@
 {
   "Config": [
     {
-      "group": "aquasecurity.github.io",
-      "helm": {
-        "chart": "trivy-operator",
-        "repo": "https://aquasecurity.github.io/helm-charts/"
+      "group": "gcp.upbound.io",
+      "directUrl": {
+        "urls": [
+          "https://github.com/crossplane-contrib/provider-upjet-gcp/archive/refs/heads/main.zip"
+        ],
+        "filter": "provider-upjet-gcp-main/package/crds/"
       }
     }
   ]
